infrastructure/kubernetes/production/01-deployment.yml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "weblend-production"
  namespace: "default"
  labels:
    app: "weblend-production"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "weblend-production"
  template:
    metadata:
      labels:
        app: "weblend-production"
    spec:
      containers:
      - name: "weblend-production"
        image: "us.gcr.io/blender-364018/weblend/server-production:15"
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            ephemeral-storage: 200Mi
            memory: 128Mi
          limits:
            cpu: 400m
            ephemeral-storage: 200Mi
            memory: 256Mi
        readinessProbe:
          httpGet:
            path: "/api/health"
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
