infrastructure/kubernetes/production/02-service.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "weblend-production-service"
  namespace: "default"
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: "weblend-production"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 3000
  selector:
    app: "weblend-production"
  type: "NodePort"
